# wcsaga_godot_converter

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  PROJECT_STATUS.md  QWEN.md  README.md  TASK_006_IMPLEMENTATION_SUMMARY.md  combine_converter_code.py  combine_cpp_code.py  combine_data_converter_code.py  combine_wcs_migration_code.py  converter_source_code.md  debug_regex.py  dependency_graph.json  migration_plan.json  parse_plan.py  plan.json  project_state.json  pyproject.toml  requirements.txt  run_tests.py  run_workflow.sh  setup_env.sh  start_claude.sh  test_import.py  test_integration.py  test_mission_remediation.gd  test_script.sh  test_ship_converter.py  verify_installation.py  work_package_breakdown.md
.ai/docs/: EPIC-001-core-foundation-infrastructure-analysis.md  EPIC-001-core-foundation-infrastructure-architecture.md  EPIC-001-core-foundation-infrastructure-godot-dependencies.md  EPIC-001-core-foundation-infrastructure-godot-files.md  EPIC-001-core-foundation-infrastructure-source-dependencies.md  EPIC-001-core-foundation-infrastructure-source-files.md  EPIC-002-asset-structures-management-addon-architecture.md  EPIC-002-asset-structures-management-addon-godot-dependencies.md  EPIC-002-asset-structures-management-addon-godot-files.md  EPIC-002-asset-structures-management-addon-source-dependencies.md  EPIC-003-data-migration-conversion-tools-analysis.md  EPIC-003-data-migration-conversion-tools-architecture.md  EPIC-003-data-migration-conversion-tools-godot-dependencies.md  EPIC-003-data-migration-conversion-tools-godot-files.md  EPIC-004-sexp-expression-system-architecture.md  EPIC-004-sexp-expression-system-godot-dependencies.md  EPIC-004-sexp-expression-system-godot-files.md  EPIC-004-sexp-expression-system-source-files.md  EPIC-005-gfred2-mission-editor-analysis.md  EPIC-005-gfred2-mission-editor-architecture.md  EPIC-005-gfred2-mission-editor-godot-dependencies.md  EPIC-005-gfred2-mission-editor-godot-files.md  EPIC-005-gfred2-mission-editor-source-files.md  (+31 more)
.bmad/: ide-orchestrator.md  orchestrator-config.md
.claude/: README.md  completed_tasks.md  project_status_summary.md  settings copy.json  settings.json  settings.local.json
.clinerules/: CLAUDE.md  bmad-workflow.md
bmad-workflow/: ide-orchestrator.md  orchestrator-config.md
concepts/: AI-Orchestrated-Development.md  AI-Powered C++ to Godot Migration.md  Agentic Code Migration Playbook.md  Agentic_C++_to_GDScript_Migration_Review.md  Agentic_Converter_Codebase_and_LangGraph.md  Agentic_Game_Converter_Improvement_Plan.md  Agentic_Orchestration_Improvement_Plan.md  C++ to GDScript Migration Strategy.md  Claude_Code_Orchestration_Playbook.md  Development_Toolchain.md  Godot_Implementation_Plan_for_WCS.md  Godot_Project_Structure_Refinement.md  Godot_Wing_Commander_Project_Structure.md  Migrating Legacy Codebases Using a Hierarchical AI Crew.md  Migrating Wing Commander Saga to Godot.md  Multi-Agent Orchestration Research & Tools.md  Multi-Agent_Framework.md  WCS_Migration_Code_Feedback_Report.md  Wing_Commander_Saga_Asset_Conversion.md  Workflow_Orchestration.md  data_converter.md  data_converter_task_list.md  final_summary.md  gap_analysis.md
converter/: README.md  SECURITY_AND_TESTING.md  __init__.py  init_env.sh  requirements.txt  run.sh  run_tests.sh  test.sh
data_converter/: CLAUDE.md  QWEN.md  data_converter_task_list.py  data_structures.py  integration_orchestrator.py  plugin.cfg  requirements.txt  run_script.sh  run_tests.sh  table_data_converter.py
docs/: ai_species_conversion_implementation.md
(+1050 files in other folders)
