[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcsaga-godot-converter"
version = "0.1.0"
description = "Agentic migration system for converting Wing Commander Saga from C++ to Godot/GDScript"
authors = [
    {name = "Stefan Fuchs", email = "admin@stefanfuchs.dev"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "PyYAML>=6.0.2",
    "networkx>=3.5",
    "watchdog>=6.0.0",
    "langgraph==0.6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov",
    "pytest-mock",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "isort>=5.13.2",
]

[project.scripts]
wcsaga-analyze = "converter.scripts.analyze_source_codebase:main"
wcsaga-setup = "converter.scripts.setup_environment:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["converter*"]

[tool.black]
line-length = 88
target-version = ['py39']


[tool.pytest.ini_options]
testpaths = ["converter/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
]